chore: task update payload
